# ChangeLog for kde-base/libkpgp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/libkpgp/ChangeLog,v 1.52 2007/01/17 18:47:36 flameeyes Exp $

  17 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Tarball was refreshed, regenerate digest.

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> libkpgp-3.5.4.ebuild:
  Bump to 3.5.6 (prerelease).

  11 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> libkpgp-3.5.4.ebuild:
  Stable on ia64.

  06 Dec 2006; <kloeri@gentoo.org> libkpgp-3.5.4.ebuild:
  Stable on Alpha.

  30 Nov 2006; Markus Rothe <corsair@gentoo.org> libkpgp-3.5.4.ebuild:
  Stable on ppc64

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> -libkpgp-3.5.3.ebuild:
  Remove old versions.

  16 Nov 2006; Joseph Jezak <josejx@gentoo.org> libkpgp-3.5.4.ebuild:
  Marked ppc stable for bug #147570.

  14 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> libkpgp-3.5.4.ebuild:
  Stable on sparc wrt #147570

  13 Nov 2006; Danny van Dyk <kugelfang@gentoo.org> libkpgp-3.5.4.ebuild:
  Marked stable on amd64 wrt bug #147570.

  13 Nov 2006; Christian Faulhammer <opfer@gentoo.org> libkpgp-3.5.4.ebuild:
  "Stable x86, bug #147570"

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> libkpgp-3.5.4.ebuild:
  Bump to 3.5.5 (pre-release).

  17 Sep 2006; Carsten Lohrke <carlo@gentoo.org> -libkpgp-3.4.1.ebuild:
  Drop KDE 3.4.

  07 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> libkpgp-3.5.4.ebuild:
  Add ~x86-fbsd keyword.

  03 Sep 2006; Bryan Østergaard <kloeri@gentoo.org>
  libkpgp-3.5.0-r1.ebuild:
  Stable on ia64.

*libkpgp-3.5.4 (25 Jul 2006)

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> +libkpgp-3.5.4.ebuild:
  Bump to 3.5.4 (pre-release).

*libkpgp-3.5.3 (01 Jun 2006)

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> +libkpgp-3.5.3.ebuild:
  Update to new release.

  01 Jun 2006; Thomas Cort <tcort@gentoo.org> libkpgp-3.5.0-r1.ebuild:
  Stable on alpha wrt Bug #132213.
