@@ -1,3 +1,0 @@
-MD5 e19a2a40e422ecd483884ce6e9ac8925 kdepim-3.5.0.tar.bz2 12865623
-RMD160 8a41dedd61f8607520d9bcfe49baadeb2b47d845 kdepim-3.5.0.tar.bz2 12865623
-SHA256 d7e3aa6783275df1ace9c3ab5164afd9017067bd9006b7af722fbe89062033c4 kdepim-3.5.0.tar.bz2 12865623
