@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/libkpgp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkpgp/ChangeLog,v 1.52 2007/01/17 18:47:36 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkpgp/ChangeLog,v 1.53 2007/02/04 03:13:10 flameeyes Exp $
+
+  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
+  -libkpgp-3.5.0-r1.ebuild:
+  Remove old versions.
 
   17 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Tarball was refreshed, regenerate digest.
